--- a/index.html
+++ b/index.html
@@ -1,37 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Age calculator app</title>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="./assets/images/favicon-32x32.png"
+		/>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Day
-  DD
-
-  Month
-  MM
-
-  Year
-  YYYY
-
-  -- years
-  -- months
-  -- days
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+		<title>Frontend Mentor | Age calculator app</title>
+	</head>
+	<body>
+		<form>
+			<label for="day">Day</label>
+			<input type="number" id="day" name="day" placeholder="DD" required />
+			<label for="month">Month</label>
+			<input type="number" id="month" name="month" placeholder="MM" required />
+			<label for="year">Year</label>
+			<input type="number" id="year" name="year" placeholder="YYYY" required />
+		</form>
+		<div id="results">
+			<p id="yearResult">--</p>
+			<p id="resultLabel">years</p>
+			<p id="monthResult">--</p>
+			<p id="resultLabel">months</p>
+			<p id="dayResult">--</p>
+			<p id="resultLabel">days</p>
+		</div>
+	</body>
 </html>
