--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<!-- displays site properly based on user's device -->
 		<link rel="stylesheet" href="style.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Slab:wght@100..900&display=swap"
+			rel="stylesheet"
+		/>
 
 		<link
 			rel="icon"
@@ -16,21 +22,47 @@
 		<title>Frontend Mentor | Age calculator app</title>
 	</head>
 	<body>
-		<form>
-			<label for="day">Day</label>
-			<input type="number" id="day" name="day" placeholder="DD" required />
-			<label for="month">Month</label>
-			<input type="number" id="month" name="month" placeholder="MM" required />
-			<label for="year">Year</label>
-			<input type="number" id="year" name="year" placeholder="YYYY" required />
-		</form>
-		<div id="results">
-			<p id="yearResult">--</p>
-			<p id="resultLabel">years</p>
-			<p id="monthResult">--</p>
-			<p id="resultLabel">months</p>
-			<p id="dayResult">--</p>
-			<p id="resultLabel">days</p>
-		</div>
+		<main>
+			<form>
+				<div class="column">
+					<p>Day</p>
+					<input type="number" id="day" name="day" placeholder="DD" required />
+				</div>
+				<div class="column">
+					<p>Month</p>
+					<input
+						type="number"
+						id="month"
+						name="month"
+						placeholder="MM"
+						required
+					/>
+				</div>
+				<div class="column">
+					<p>Year</p>
+					<input
+						type="number"
+						id="year"
+						name="year"
+						placeholder="YYYY"
+						required
+					/>
+				</div>
+			</form>
+			<div id="results">
+				<div class="row">
+					<p id="yearResult">--</p>
+					<p id="resultLabel">years</p>
+				</div>
+				<div class="row">
+					<p id="monthResult">--</p>
+					<p id="resultLabel">months</p>
+				</div>
+				<div class="row">
+					<p id="dayResult">--</p>
+					<p id="resultLabel">days</p>
+				</div>
+			</div>
+		</main>
 	</body>
 </html>
