--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
 					/>
 				</div>
 			</form>
+			<div class="seperator">
+				<div class="line"></div>
+				<img src="/images/icon-arrow.svg" />
+			</div>
 			<div id="results">
 				<div class="row">
 					<p id="yearResult">--</p>
