Added basic button functionality

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			</form>
 			<div class="seperator">
 				<div class="line"></div>
-				<img src="/images/icon-arrow.svg" />
+				<img id="submit" src="/images/icon-arrow.svg" />
 			</div>
 			<div id="results">
 				<div class="row">
@@ -68,5 +68,6 @@
 				</div>
 			</div>
 		</main>
+		<script src="script.js"></script>
 	</body>
 </html>
