Updated date calculator and added some error messages

--- a/index.html
+++ b/index.html
@@ -25,28 +25,19 @@
 		<main>
 			<form>
 				<div class="column">
-					<p>Day</p>
-					<input type="number" id="day" name="day" placeholder="DD" required />
+					<p id="label">Day</p>
+					<input type="number" id="day" name="day" placeholder="DD" />
+					<p id="dayError" class="inputError">hello</p>
 				</div>
 				<div class="column">
-					<p>Month</p>
-					<input
-						type="number"
-						id="month"
-						name="month"
-						placeholder="MM"
-						required
-					/>
+					<p id="label">Month</p>
+					<input type="number" id="month" name="month" placeholder="MM" />
+					<p id="monthError" class="inputError">hello</p>
 				</div>
 				<div class="column">
-					<p>Year</p>
-					<input
-						type="number"
-						id="year"
-						name="year"
-						placeholder="YYYY"
-						required
-					/>
+					<p id="label">Year</p>
+					<input type="number" id="year" name="year" placeholder="YYYY" />
+					<p id="yearError" class="inputError">hello</p>
 				</div>
 			</form>
 			<div class="seperator">
