--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			rel="icon"
 			type="image/png"
 			sizes="32x32"
-			href="./assets/images/favicon-32x32.png"
+			href="./images/favicon-32x32.png"
 		/>
 
 		<script src="https://cdn.jsdelivr.net/npm/luxon@1.26.0/build/global/luxon.min.js"></script>
@@ -42,7 +42,7 @@
 			<p id="inputError">hello</p>
 			<div class="seperator">
 				<div class="line"></div>
-				<img id="submit" src="/images/icon-arrow.svg" />
+				<img id="submit" src="./images/icon-arrow.svg" />
 			</div>
 			<div id="results">
 				<div class="row">
